opam-version: "1.2"
maintainer: "careyjanecka@gmail.com"
authors: ["Carey Janecka"]
homepage: "https://github.com/figitaki/reason-ethereum"
bug-reports: "https://github.com/figitaki/reason-ethereum/issues"
dev-repo: "https://github.com/figitaki/reason-ethereum.git"

build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]

build-test: ["jbuilder" "runtest" "-p" name]

depends: [
  "jbuilder" {build & >= "1.0+beta14"}
  "alcotest" {test}
]
